qa-k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: qa-frontend
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:619403130511:certificate/457d53eb-f2f5-484f-b546-1b8ad90b368a
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/load-balancer-name: "qa-frontend-alb"
spec:
  ingressClassName: alb
  rules:
    - host: test.talansm.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-test
                port:
                  number: 80
    - host: portal-qa.talansm.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
